# complexity-framework

./: .gitignore  Makefile  ORG_README.md  README.md  README_PYPI.md  pyproject.toml  test_safety_integration.py
.github/workflows/: publish.yml
.hermes/plans/: 2026-07-11_184706-object-llm-production-tmlr.md
complexity/: __init__.py
complexity/RL/: __init__.py
complexity/RL/grpo/: __init__.py  rewards.py  train_grpo.py
complexity/api/: __init__.py  dataset.py  multimodal.py  tokenizer.py  trainer.py
complexity/api/core/: __init__.py  architecture.py  attention.py  cuda.py  efficient.py  mlp.py
complexity/cli/: __init__.py  app.py  core.py
complexity/cli/commands/: __init__.py  convert.py  info.py  tokenize.py  train.py
complexity/config/: __init__.py  model_config.py
complexity/core/: __init__.py  integer_ops.py  triton_kernels.py
complexity/core/architectures/: __init__.py  mamba.py  retnet.py  rwkv.py
complexity/core/attention/: __init__.py  base.py  causal_conv.py  causal_fast_weight_conv.py  causal_state_conv.py  flash_attention.py  gqa.py  i64_attention.py  lexical_gqa.py  lexical_key_gqa.py  lexical_wrv.py  routed_gqa.py
complexity/core/context/: __init__.py  associative.py
complexity/data/: __init__.py  token_shards.py
complexity/dataset/: dataset.py
complexity/evaluation/: associative_recall.py
complexity/experimental/: __init__.py
complexity/experiments/: __init__.py  shared_associative_attention.py
complexity/gpu/: __init__.py  compile.py  cuda_config.py  data_loading.py  distributed_cleanup.py  fused_kernels.py  gradient.py  memory.py  nccl_config.py  patches.py  precision.py  profiler.py  rccl_config.py
complexity/inference/: batching.py  kv_cache.py  speculative.py
complexity/models/: block.py  builder.py
complexity/multimodal/: __init__.py  audio.py  fusion.py  omni.py  video.py  vision.py
complexity/parallel/: __init__.py  cluster.py  data_parallel.py  pipeline_export.py  tensor_parallel.py
complexity/tokenizer/: __init__.py  bpe_tokenizer.py  config.py  tokenizer.py
complexity/training/: __init__.py  adam_tr.py  callbacks.py  cluster_plan.py  config.py  metrics.py  moe_telemetry.py  muon.py  muon_tr.py  o200k_pretrain.py  optimizers.py  pipeline_check.py  run_config.py  runner.py  scheduler.py  trainer.py
complexity/utils/: __init__.py  checkpointing.py  device.py  local_checkpoint.py  mps.py  safety.py
complexity_cuda/: fused_cross_entropy.py  fused_mlp.py  fused_residual.py  triton_token_routed.py
configs/: complexity-7b.yaml  gpt2-small.yaml  hackathon-b300.yaml  llama-7b.yaml  mistral-7b.yaml
configs/run_configs/: 100m_o200k_tr_30b_b300.yaml  100m_o200k_tr_rocm_mi350x.yaml  1b_o200k_tr_1T_rocm_16gpu.yaml  300m_o200k_tr_rocm_scale.yaml  50m_o200k_tr_rocm.yaml  8b_o200k_tr_32t_gb300_4608.yaml
docs/: INL-DYNAMICS-PAPER.md  api.md  architecture_complexity_deep.drawio  architectures.md  cuda.md  custom-models.md  dynamics.md  efficient.md  expert_viz.html  getting-started.md  hadamard_ablation.md  huggingface-org-card.md  moe.md  multimodal.md  run1_vs_run2_stepbystep.html  run_configs.md  token-routed.md  training.md
examples/robotics/: behavior_cloning.py  robot_transformer.py  world_model.py
figures_scripts/: plot_topk_ablation.py
paper/tmlr/: .gitignore  README.md  main.tex  main_fr.tex  references.bib
scripts/: agentic_calculator_demo.py  audit_attention_free_checkpoint.py  bootstrap.sh  build_fineweb_token_frequencies.py  chat_generate_local.py  check_rocm_support.py  collect_100m_ablation_measurements.py  convert_checkpoint.py  convert_pt_to_mlx.py  download_o200k_tokenizer.py  eval_benchmarks.py  eval_inference.py  eval_perplexity.py  evaluate_associative_recall.py  evaluate_attention_free_checkpoint.py  install_backend.sh  launch_agentic_v3_sft.sh  launch_rocm_multinode.sh  launcher_example.sh  mlx_compare.py  mlx_generate.py  plan_run.py  plot_attention_free_checkpoint_profile.py  plot_corrected_architecture_validation.py  plot_hadamard_ablation.py  plot_synthetic_context_probe.py  prepare_agentic_v3_dataset.py  prepare_agentic_v4_datetime_dataset.py  prepare_agentic_v5_bootstrap_dataset.py  prepare_fineweb_local.py  prepare_general_instruct_dataset.py  prepare_public_stack_sft_datasets.py  prepare_sft_cot_dataset.py  prepare_token_shard.py  review_multimodal.py  setup_remote.sh  sft_100m_o200k_tr_local.py  train_100m_dense_local.py  train_100m_o200k_tr_local.py  train_100m_tr_local.py  (+32 more)
scripts/ablations_100m/: diagnose_routing_loads.py  run_b200x2_1b_all.sh  run_h200_1b_all.sh  run_h200_4b_all.sh  run_local_200_all.sh  run_local_200_fixed_topk05.sh  train_100m_dense_residual.sh  train_100m_modulo_shared.sh  train_100m_random_shared.sh  train_100m_round_robin_shared.sh  train_100m_shared_only.sh  train_100m_zipf_no_shared.sh  train_100m_zipf_shared.sh
scripts/archive/: train_400m_dense.py  train_ablation_150m.py  train_dense_baseline.py  train_deterministic_ablation_384m.py  train_tr_code_400m.py
spaces/Compare/: Dockerfile  README.md  app.py
spaces/Dense-400M/: Dockerfile  README.md  app.py
spaces/TR-MOE-400M/: Dockerfile  README.md  app.py
templates/: sft_chat.jinja
tests/: __init__.py  test_100m_ablation_configs.py  test_agentic_calculator_demo.py  test_associative_recall.py  test_causal_conv_model.py  test_causal_fast_weight_conv.py  test_cluster_plan.py  test_core.py  test_deterministic_init.py  test_device_backend.py  test_fineweb_split.py  test_fsdp.py  test_hadamard_init.py  test_i64.py  test_imports.py  test_lexical_gqa_attention.py  test_lexical_key_gqa_attention.py  test_lexical_modulated_mlp.py  test_lexical_wrv_attention.py  test_lexical_zipf.py  test_models.py  test_mup_coordinate_check.py  test_o200k_pretrain.py  test_o200k_runtime_controls.py  test_pipeline_export.py  test_robotics.py  test_run_config.py  test_save_pretrained_fsdp.py  test_shared_associative_attention.py  test_stack_sft.py  test_training.py
tokenizer/: tokenizer_config.json
tokenizer-code/: tokenizer.json  tokenizer_config.json
tokenizer-o200k/: tiktoken_config.json
(+168 files in other folders)
