[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "complexity-framework"
version = "0.3.0"
description = "Modular Python framework for Transformer and Token-Routed language-model research"
readme = "README_PYPI.md"
license = {text = "CC-BY-NC-4.0"}
authors = [
    {name = "Complexity-ML", email = "contact@complexity-ml.org"}
]
keywords = [
    "llm",
    "transformer",
    "deep-learning",
    "pytorch",
    "attention",
    "moe",
    "mixture-of-experts",
    "flash-attention",
    "mamba",
    "rwkv",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    # NOTE: torch is intentionally NOT in required deps. PyPI's default `torch`
    # wheel is the NVIDIA CUDA build — installing it via `pip install -e .` on a
    # ROCm host silently replaces the AMD-built torch and yanks in 1.5 GB of
    # nvidia-* packages. Pick a backend extra ([cuda] / [rocm] / [cpu]) so
    # torch resolves against the right wheel index.
    "numpy>=1.21.0",
    "einops>=0.6.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "tiktoken>=0.7.0",
    "datasets>=2.0.0",
    "tqdm>=4.0.0",
    "wandb>=0.15.0",
    "safetensors>=0.4.0",   # save_pretrained + checkpointing
    "pyyaml>=6.0",          # imported at module load in config/model_config.py
    "typer>=0.9.0",         # CLI (complexity.cli)
]

[project.optional-dependencies]
# NVIDIA CUDA: default PyPI wheel is the CUDA build, no index flag needed.
#   pip install -e .[cuda]
cuda = [
    "torch>=2.0.0",
    "triton>=2.0.0",
    "liger-kernel>=0.5.0",  # fused linear+CE, RMSNorm, RoPE (Triton)
    # flash-attn removed: builds from source (~30min), SDPA covers the same path
]
# AMD ROCm: torch wheels live on download.pytorch.org/whl/rocm*/, not PyPI.
# The +rocm6.4 local version tag is impossible to satisfy from PyPI, so pip
# will fail fast (rather than silently grabbing the CUDA wheel) unless the
# ROCm index is in scope.
#
# Install with:
#   pip install -e ".[rocm]" --index-url https://download.pytorch.org/whl/rocm6.4
#
# Bump the index URL to match newer ROCm runtimes (rocm7.0 etc.) — ABI is
# backward-compatible so rocm6.4 wheels work on rocm7.x hosts.
rocm = [
    "torch>=2.8.0,<3.0",
    "pytorch-triton-rocm; platform_system == 'Linux'",
]
# CPU-only: install with
#   pip install -e .[cpu] --extra-index-url https://download.pytorch.org/whl/cpu
cpu = [
    "torch>=2.0.0",
]
fp8 = [
    "torchao>=0.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
complexity = "complexity.cli.app:main"
cf-o200k-pretrain = "complexity.training.o200k_pretrain:main"
cf-plan-run = "complexity.training.plan_run:main"
cf-plan-cluster = "complexity.training.cluster_plan:main"
cf-check-pipeline = "complexity.training.pipeline_check:main"

[project.urls]
Homepage = "https://github.com/Complexity-ML/complexity-framework"
Documentation = "https://github.com/Complexity-ML/complexity-framework/tree/main/docs"
Repository = "https://github.com/Complexity-ML/complexity-framework"
Issues = "https://github.com/Complexity-ML/complexity-framework/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["complexity*"]
exclude = ["docs*", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.setuptools.exclude-package-data]
"*" = ["*.png", "*.jpg", "*.jpeg", "*.gif", "*.svg", "*.md"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
